--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,23 +4,17 @@
       <form (ngSubmit)="validate()" #loginForm="ngForm">
         <div class="form-group">
           <label for="name">Username</label>
-          <input type="text" class="form-control" id="name" required [(ngModel)]="model.name" name="name" #name="ngModel">
+          <input type="text" class="form-control" id="name" required [(ngModel)]="user.name" name="name" #name="ngModel">
           <div [hidden]="name.valid || name.pristine" class="alert alert-danger">Username is required</div>
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="text" class="form-control" id="password" required [(ngModel)]="model.password" name="password" #password="ngModel">
+          <input type="password" class="form-control" id="password" required [(ngModel)]="user.password" name="password" #password="ngModel">
           <div [hidden]="password.valid || password.pristine" class="alert alert-danger">Password is required</div>
         </div>
-        <div class="form-group form-check">
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox"> Remember me
-          </label>
-        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
-        <button type="button" (click)="loginWithGithun()" class="btn btn-primary">Login with Github</button>
+        <button type="button" (click)="loginWithGithub()" class="btn btn-primary">Login with Github</button>
       </form>
-      <a href="https://github.com/login/oauth/authorize?client_id=dd3c286cfdef5ff18af8">Login with Github</a>
     </div>
   </div>
 </div>
